namespace AuthProvider.ViewModels
{
    public class AuthorizeViewModel
    {
        public string? ApplicationName { get; set; }
        public string? Scope { get; set; }
    }
}
